--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -6,6 +6,7 @@
 
 :root {
   --text-color: black;
+  --bg-color: white;
   --bg-url: url();
   --stroke-color: rgba(0, 0, 0, 0.5);
   --surface-color: rgba(255, 255, 255, 0.1);
@@ -17,6 +18,7 @@
 
 .light {
   --text-color: white;
+  --bg-color: black;
   --bg-url: url();
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.05);
@@ -27,7 +29,7 @@
 }
 
 body {
-  background-image: var(--bg-url);
+  background-color: var(--bg-color);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: auto;
@@ -50,6 +52,7 @@ body * {
 #profile img {
   width: 112px;
   margin: auto;
+  border-radius: 50%;
 }
 
 #profile p {
