ajust container width

--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -42,7 +42,11 @@ body * {
 }
 
 #container {
+  width: 100%;
+  max-width: 588px;
   padding: 0 24px;
+  margin: 56px auto 0;
+  position: center;
 }
 
 #profile {
