--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -7,7 +7,7 @@
 :root {
   --text-color: black;
   --bg-color: white;
-  --bg-url: url();
+  --bg-url: url(/assets/yoru-valorant.gif);
   --stroke-color: rgba(0, 0, 0, 0.5);
   --surface-color: rgba(255, 255, 255, 0.1);
   --img-profile: url();
@@ -19,7 +19,7 @@
 .light {
   --text-color: white;
   --bg-color: black;
-  --bg-url: url();
+  --bg-url: url(/assets/yoru-valorant.gif);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.05);
   --img-profile: url();
@@ -29,11 +29,12 @@
 }
 
 body {
-  background-color: var(--bg-color);
+  background-image: var(--bg-url);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: auto;
   padding: 12px;
+  height: 100vh;
 }
 
 body * {
@@ -166,4 +167,16 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/*media queries*/
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(/assets/yoru-valorant.gif);
+  }
+
+  .light {
+    --bg-url: url(/assets/yoru-valorant.gif);
+  }
 }
