--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -23,7 +23,7 @@
   --img-profile: url();
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(255, 255, 255, 0.1);
-  --switch-bg-url: url(/assets/seta-esquerda.png);
+  --switch-bg-url: url(/assets/seta-direita.png);
 }
 
 body {
@@ -80,10 +80,12 @@ body * {
   border-radius: 50%;
 
   position: absolute;
-  top: 50%;
+  top: -15%;
   left: 0%;
   z-index: 1;
-  transform: translateY(-50%);
+  /*transform: translateY(0%);
+  transform: translateX(0%);
+  transform: translateZ(50%);*/
 
   animation: slide-in-to-left 0.2s;
 }
@@ -190,6 +192,7 @@ footer {
   }
   to {
     left: 50%;
+    transform: rotate(180deg);
   }
 }
 
@@ -199,5 +202,6 @@ footer {
   }
   to {
     left: 0%;
+    transform: rotate(360deg);
   }
 }
